// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders alert inbox when there are unread notifications 1`] = `
<DocumentFragment>
  <a
    class="nav-link"
    href="/admin/messages"
  >
    <i
      class="fa fa-inbox"
      style="font-size: 1.5rem;"
    >
      <span
        class="notification"
      >
        34
      </span>
    </i>
  </a>
</DocumentFragment>
`;

exports[`Notification renders plain inbox when no unread notifications 1`] = `
<DocumentFragment>
  <a
    class="nav-link"
    href="/admin/messages"
  >
    <i
      class="fa fa-inbox"
      style="font-size: 1.5rem;"
    />
  </a>
</DocumentFragment>
`;
